Added Dungeon Application link on portfolio page

--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -89,10 +89,7 @@
             <div class="center fadeInDown">
                 <h2>About Me</h2>
                 <p class="lead">
-                    I am an 18-year-old recent High School graduate. I love anything involved with computers, I've even built 3 of my own. I love coding and video games. My favorite thing is solving a puzzle in unique ways. I also love doing house renovations, something I frequently do with my dad who owns his own property investment company. You can usually find me playing video games in my free time though. That's what I do the most, right now my favorite game is Destiny 2.
-                    I have a dog who lives with my mom and my cat who lives with me, they are both a huge part of my life. Other than that there isn't much left of my life. It's pretty straightforward.
-
-                    Before Centriq, I was a Sacker at Price Chopper, a common grocery store in the Midwest. I wanted to get into IT/Web Development because I love technology. Over the last year of my High School career, I dove deep into coding, I wanted to learn everything about it. Finally, I decided instead of attending a 4-year college that I would attend Centriq and get right into the workforce. In my free time, I like to do renovation projects, help people with hardware/software issues on their computers, and play video games.
+                    Hello, my name is Jacob Roelofsz. Over the past 2 years, I’ve been working in the Home Renovation industry. During this time, I’ve learned how to manage projects with a team-oriented mindset. This time taught me how to solve problems without starting from a blank slate and possibly working with old though processes. I’ve had to come up with creative solutions to solve a variety of issues that will vary from job site to job site. I’ve also worked in the Service industry on and off during that time which helped me cultivate my customer service skills. I was able to learn how to effectively communicate knowledge to customers or coworkers that have questions and need problems solved. Over my whole life I have been surrounded by technology which helped develop a love for it. This love drove me to dive into coding during my High School career.  Once I discovered coding, I knew I wanted to strive in the subject. I would spend a few hours every week learning new concepts and languages to expand my library of languages. Once my High School career was over, I knew I wanted to keep going into coding. This drive led me to Centriq Training where I was able to grow even more hunger for learning more complex coding languages.
                 </p>
             </div>
             <div class="row">
@@ -154,14 +151,14 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="images/class/billMcCarty.jpg" alt="Willaim McCarty" style="width: 100%; height: auto;">
+                            <img src="images/class/profilepic.jpg" alt="Willaim McCarty" style="width: 100%; height: auto;">
                         </div>
                         <div class="team-content">
                             <h4>William McCarty</h4>
                             <span class="desg">Web Devloper</span>
                             <div class="team-social">
                                 <a class="fa fa-user" href="http://william-mccarty.com/index.html" target="_blank"></a>
-                                <a class="fa fa-linkedin" href="#"></a>
+                                <a class="fa fa-linkedin" href="https://www.linkedin.com/in/william-j-mccarty/" target="_blank"></a>
                             </div>
                         </div>
                     </div>
@@ -169,14 +166,14 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="#" alt="">
+                            <img src="images/class/coreymanderson.jpg" alt="Corey Andserson" style="width: 100%; height: 344px;">
                         </div>
                         <div class="team-content">
-                            <h4>Teamate Name</h4>
+                            <h4>Corey Anderson</h4>
                             <span class="desg">Web Devloper</span>
                             <div class="team-social">
-                                <a class="fa fa-user" href="#"></a>
-                                <a class="fa fa-linkedin" href="#"></a>
+                                <a class="fa fa-user" href="http://coreymanderson.com/" target="_blank"></a>
+                                <a class="fa fa-linkedin" href="https://www.linkedin.com/in/corey-anderson-9a743219b/" target="_blank"></a>
                             </div>
                         </div>
                     </div>
@@ -184,14 +181,31 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="#" alt="">
+                            <img src="images/class/amandaallen.jpg" alt="Amanda Allen" style="width: 100%; height: 344px;">
                         </div>
                         <div class="team-content">
-                            <h4>Teamate Name</h4>
+                            <h4>Amanda Allen</h4>
                             <span class="desg">Web Devloper</span>
                             <div class="team-social">
-                                <a class="fa fa-user" href="#"></a>
-                                <a class="fa fa-linkedin" href="#"></a>
+                                <a class="fa fa-user" href="http://amandaallen.net//" target="_blank"></a>
+                                <a class="fa fa-linkedin" href="https://www.linkedin.com/in/-amanda-allen-/" target="_blank"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-6 single-team">
+                    <div class="inner">
+                        <div class="team-img">
+                            <img src="images/class/ashleysmith.jpg" alt="Ashley Smith" style="width: 100%; height: 344px;">
+                        </div>
+                        <div class="team-content">
+                            <h4>Ashley Smith</h4>
+                            <span class="desg">Web Devloper</span>
+                            <div class="team-social">
+                                <a class="fa fa-user" href="http://d2107asmith-001-site1.mysitepanel.net/" target="_blank"></a>
+                                <a class="fa fa-linkedin" href="https://www.linkedin.com/in/ashley-nichole92/" target="_blank"></a>
                             </div>
                         </div>
                     </div>
@@ -199,14 +213,14 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="#" alt="">
+                            <img src="images/class/calebmitchell.jpg" alt="Caleb Mitchell" style="width: 100%; height: 344px;">
                         </div>
                         <div class="team-content">
-                            <h4>Teamate Name</h4>
+                            <h4>Caleb Mitchell</h4>
                             <span class="desg">Web Devloper</span>
                             <div class="team-social">
-                                <a class="fa fa-user" href="#"></a>
-                                <a class="fa fa-linkedin" href="#"></a>
+                                <a class="fa fa-user" href="http://c-mitchell.com/" target="_blank"></a>
+                                <a class="fa fa-linkedin" href="https://www.linkedin.com/in/c-labmitchell/" target="_blank"></a>
                             </div>
                         </div>
                     </div>
@@ -214,29 +228,14 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="#" alt="">
+                            <img src="images/class/michaelrussell.jpg" alt="" style="width: 100%; height: 344px;">
                         </div>
                         <div class="team-content">
-                            <h4>Teamate Name</h4>
+                            <h4>Michael Russell</h4>
                             <span class="desg">Web Devloper</span>
                             <div class="team-social">
-                                <a class="fa fa-user" href="#"></a>
-                                <a class="fa fa-linkedin" href="#"></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 single-team">
-                    <div class="inner">
-                        <div class="team-img">
-                            <img src="#" alt="">
-                        </div>
-                        <div class="team-content">
-                            <h4>Teamate Name</h4>
-                            <span class="desg">Web Devloper</span>
-                            <div class="team-social">
-                                <a class="fa fa-user" href="#"></a>
-                                <a class="fa fa-linkedin" href="#"></a>
+                                <a class="fa fa-user" href="http://michaelrussell.net/"></a>
+                                <a class="fa fa-linkedin" href="https://www.linkedin.com/in/-michael-russell/"></a>
                             </div>
                         </div>
                     </div>
