--- a/PersonalSite/portfolio.html
+++ b/PersonalSite/portfolio.html
@@ -91,7 +91,7 @@
                 <div class="portfolio-items">
                     <div class="portfolio-item apps col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/thumbnails/FED1StudioThumb.jpg" alt="">
+                            <img class="img-responsive" src="images/thumbnails/FED1StudioThumb.jpg" alt="Thumbnail for FED1StudioProject">
                             <div class="overlay">
                                 <div class="recent-work-inner">
                                     <a  href="http://wgaccounting.jacobroelofsz.com" target="_blank" style="color: white;">FED1StudioProject<br />Click to open in new tab</a>
@@ -102,10 +102,10 @@
                     <!--/.portfolio-item-->
                     <div class="portfolio-item joomla bootstrap col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/item-2.png" alt="">
+                            <img class="img-responsive" src="images/thumbnails/dungeonThumbnail.png" alt="Thumbnail for Dungeon Application">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/item-2.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a href="https://youtu.be/NNSjbuYdvA0g" target="_blank" style="color: white;">C# Dungeon Application Video <br /> Click to view in youtube.</a>
                                 </div>
                             </div>
                         </div>
