Added conformity across all pages

--- a/PersonalSite/resume.html
+++ b/PersonalSite/resume.html
@@ -1,13 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Resume | Jacob Roelofsz</title>
-
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -31,7 +29,6 @@
 </head>
 <!--/head-->
 
-
 <body>
     <header id="header">
         <div class="top-bar">
@@ -39,15 +36,14 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p><i class="fa fa-phone-square"></i> +0123 456 70 90</p>
+                            <p><i class="fa fa-phone-square"></i> +1 816-825-2860</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-xs-12">
                         <div class="social">
                             <ul class="social-share">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://www.facebook.com/jake.roelofsz.7" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/jacob-roelofsz/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -131,6 +127,18 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="jobster-timeline-item">
+                                        <div class="jobster-timeline-cricle">
+                                            <i class="far fa-circle"></i>
+                                        </div>
+                                        <div class="jobster-timeline-info">
+                                            <div class="dashboard-timeline-info">
+                                                <span class="jobster-timeline-time">2016-8 - 2021-5</span>
+                                                <h6 class="mb-2">Liberty North High School</h6>
+                                                <span>- High School Diploma</span>
+                                            </div>
+                                        </div>
+                                    </div>
 
                                 </div>
                             </div>
@@ -143,7 +151,7 @@
                                         </div>
                                         <div class="jobster-timeline-info">
                                             <div class="dashboard-timeline-info">
-                                                <span class="jobster-timeline-time">2018-Pres</span>
+                                                <span class="jobster-timeline-time">2018-2021</span>
                                                 <h6 class="mb-2">Manual Laborer</h6>
                                                 <span>- Two Mikes Investmant Co LLC</span>
                                                 <p class="mt-2">Assist to property turnover renovations. During my expierence I learned how to come up with solutions with minimal access to the issue. Example: how to add an outlet without ripping out the whole wall.</p>
@@ -174,23 +182,10 @@
                                         </div>
                                         <div class="jobster-timeline-info">
                                             <div class="dashboard-timeline-info">
-                                                <span class="jobster-timeline-time">2020-6-01 to 2020-6-01</span>
-                                                <h6 class="mb-2">Web Designer</h6>
-                                                <span>- Inwave Studio</span>
-                                                <p class="mt-2">One of the main areas that I work on with my clients is shedding these non-supportive beliefs and replacing them with beliefs that will help them to accomplish their desires.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="jobster-timeline-item mb-0">
-                                        <div class="jobster-timeline-cricle">
-                                            <i class="far fa-circle"></i>
-                                        </div>
-                                        <div class="jobster-timeline-info">
-                                            <div class="dashboard-timeline-info">
-                                                <span class="jobster-timeline-time">2020-6-01 to 2020-6-01</span>
-                                                <h6 class="mb-2">Secondary School Certificate</h6>
-                                                <span>- Engineering High School</span>
-                                                <p class="mt-2">Figure out what you want, put a plan together to achieve it, understand the cost, believe in yourself then go and get it!</p>
+                                                <span class="jobster-timeline-time">September 2021</span>
+                                                <h6 class="mb-2">Developer Student of the Month</h6>
+                                                <span>- Centriq Training</span>
+                                                <p class="mt-2">Recognized for technical skills, knowledge of class content, and dedication to classwork. Recommended by my instructors and advisors.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -232,6 +227,4 @@
     <script src="js/jquery.isotope.min.js"></script>
     <script src="js/main.js"></script>
 </body>
-
 </html>
-
